Overshooting when measuring the text caused things to go out-of-sync and to hang, b=142206, r=shanjian, sr=dbaron, a=asa